--- a/index.html
+++ b/index.html
@@ -564,14 +564,19 @@
 
             try {
                 // Replace with your n8n webhook URL
-                const response = await fetch('https://unlogged-olinda-nonpsychological.ngrok-free.dev/webhook/aravind-lead', {
+                const response = await fetch("https://xxxx.ngrok-free.dev/webhook-test/aravind-lead", {
+  method: "POST",
+  headers: {
+    "Content-Type": "application/json"
+  },
+  body: JSON.stringify({
+    name: nameValue,
+    phone: phoneValue,
+    vehicle: vehicleValue,
+    message: messageValue
+  })
+});
 
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify(data)
-                });
 
                 if (response.ok) {
                     // Show success message
