--- a/index.html
+++ b/index.html
@@ -533,68 +533,46 @@
     </div>
 
    <script>
-    // Vehicle option selection
-    const vehicleOptions = document.querySelectorAll('.vehicle-option');
-    const selectedVehicleInput = document.getElementById('selectedVehicle');
+document.getElementById('leadForm').addEventListener('submit', async function(e) {
+    e.preventDefault();
 
-    vehicleOptions.forEach(option => {
-        option.addEventListener('click', function() {
-            vehicleOptions.forEach(opt => opt.classList.remove('selected'));
-            this.classList.add('selected');
-            selectedVehicleInput.value = this.dataset.value;
+    const vehicle = document.getElementById("selectedVehicle").value;
+
+    if (!vehicle) {
+        alert("Please select a vehicle");
+        return;
+    }
+
+    try {
+        const response = await fetch("https://unlogged-olinda-nonpsychological.ngrok-free.dev/webhook/aravind-lead", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({
+                name: document.getElementById("name").value,
+                phone: document.getElementById("phone").value,
+                vehicle: vehicle,
+                message: document.getElementById("message").value
+            })
         });
-    });
 
-    // Form submission
-    document.getElementById('leadForm').onsubmit = async function(e) {
-        e.preventDefault();
-
-        if (!selectedVehicleInput.value) {
-            alert('Please select a vehicle');
-            return;
+        if (!response.ok) {
+            throw new Error("Server error");
         }
 
-        try {
-            const response = await fetch("https://unlogged-olinda-nonpsychological.ngrok-free.dev/webhook/aravind-lead", {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json"
-                },
-                body: JSON.stringify({
-                    name: document.getElementById("name").value,
-                    phone: document.getElementById("phone").value,
-                    vehicle: selectedVehicleInput.value,   // ✅ FIXED
-                    message: document.getElementById("message").value,
-                    timestamp: new Date().toISOString(),
-                    source: "Website Lead"
-                })
-            });
+        alert("Lead submitted successfully!");
 
-            if (response.ok) {
-                document.getElementById('successMessage').style.display = 'block';
+        document.getElementById("leadForm").reset();
+        document.getElementById("selectedVehicle").value = "";
 
-                e.target.reset();
-                vehicleOptions.forEach(opt => opt.classList.remove('selected'));
-                selectedVehicleInput.value = '';
-
-                setTimeout(() => {
-                    document.getElementById('successMessage').style.display = 'none';
-                }, 5000);
-            } else {
-                alert('Something went wrong. Please try again.');
-            }
-
-        } catch (error) {
-            console.error("Network error:", error);
-            alert("Network error. Please check your connection.");
-        }
-    };
-
-    // Phone validation
-    document.querySelector('input[name="phone"]').addEventListener('input', function() {
-        this.value = this.value.replace(/[^0-9]/g, '').slice(0, 10);
-    });
+    } catch (error) {
+        console.error("Network error:", error);
+        alert("Network error. Please check your connection.");
+    }
+});
 </script>
+
 
 </body>
 </html>
