--- a/index.html
+++ b/index.html
@@ -533,15 +533,20 @@
     </div>
 
    <script>
-document.getElementById('leadForm').addEventListener('submit', async function(e) {
-    e.preventDefault();
-
-    const vehicle = document.getElementById("selectedVehicle").value;
-
-    if (!vehicle) {
-        alert("Please select a vehicle");
-        return;
-    }
+       // Vehicle option selection 
+       const vehicleOptions = document.querySelectorAll('.vehicle-option'); 
+       const selectedVehicle = document.getElementById('selectedVehicle'); 
+       vehicleOptions.forEach(option => { option.addEventListener('click', function() { 
+           vehicleOptions.forEach(opt => opt.classList.remove('selected')); 
+        this.classList.add('selected'); selectedVehicle.value = this.dataset.value; 
+       }); 
+    }); // Form submission 
+       document.getElementById('leadForm').onsubmit = async function(e) { e.preventDefault(); 
+    // Validate vehicle selection 
+   if (!selectedVehicle.value) { alert('Please select a vehicle'); 
+   return; } const formData = new FormData(e.target); const data = Object.fromEntries(formData); 
+    // Add timestamp 
+    data.timestamp = new Date().toISOString(); data.source = 'Website Lead';
 
     try {
         const response = await fetch("https://unlogged-olinda-nonpsychological.ngrok-free.dev/webhook/aravind-lead", {
