--- a/index.html
+++ b/index.html
@@ -562,21 +562,16 @@
             data.timestamp = new Date().toISOString();
             data.source = 'Website Lead';
 
-           try {
-            const response = await fetch("https://unlogged-olinda-nonpsychological.ngrok-free.dev/webhook/aravind-lead", {
+         try {
+                // Replace with your n8n webhook URL
+                const response = await fetch("https://unlogged-olinda-nonpsychological.ngrok-free.dev/webhook/aravind-lead", {
                 method: "POST",
-                headers: {
-                    "Content-Type": "application/json"
-                },
-                body: JSON.stringify({
-                    name: document.getElementById("name").value,
-                    phone: document.getElementById("phone").value,
-                    vehicle: selectedVehicleInput.value,   // ✅ FIXED
-                    message: document.getElementById("message").value,
-                    timestamp: new Date().toISOString(),
-                    source: "Website Lead"
-                })
-            });
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify(data)
+                });
+
 
                 if (response.ok) {
                     // Show success message
