--- a/index.html
+++ b/index.html
@@ -564,13 +564,21 @@
 
             try {
                 // Replace with your n8n webhook URL
-                const response = await fetch('http://YOUR_LINUX_IP:5678/webhook/aravind-lead', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify(data)
-                });
+                const response = await fetch("https://unlogged-olinda-nonpsychological.ngrok-free.dev/webhook/aravind-lead", {
+    method: "POST",
+    headers: {
+        "Content-Type": "application/json"
+    },
+    body: JSON.stringify({
+        name: data.name,
+        phone: data.phone,
+        village: data.village,
+        vehicle: data.vehicle,
+        message: data.message,
+        source: "Website",
+        timestamp: new Date().toISOString()
+    })
+});
 
                 if (response.ok) {
                     // Show success message
